# quantity_types

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: acceleration.hpp  angle.hpp  distance.hpp  duration.hpp  length.hpp  mass.hpp  speed.hpp  temperature.hpp  units.hpp
include/impl/: acceleration_impl.hpp  acceleration_operators.hpp  angle_impl.hpp  angle_operators.hpp  duration_impl.hpp  duration_operators.hpp  length_impl.hpp  length_operators.hpp  mass_impl.hpp  mass_operators.hpp  speed_impl.hpp  speed_operators.hpp  temperature_impl.hpp  temperature_operators.hpp
tests/: CMakeLists.txt  acceleration_tests.cpp  angle_tests.cpp  duration_tests.cpp  length_tests.cpp  mass_tests.cpp  speed_tests.cpp  temperature_tests.cpp
